--- a/child-monitor-app/package.json
+++ b/child-monitor-app/package.json
@@ -13,24 +13,24 @@
     "build:ios": "cd ios && xcodebuild -workspace ParentGuardMonitor.xcworkspace -scheme ParentGuardMonitor -configuration Release"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-background-job": "^1.2.2",
-    "react-native-background-task": "^0.2.1",
-    "react-native-contacts": "^7.0.8",
-    "react-native-device-info": "^10.11.0",
-    "react-native-fs": "^2.20.0",
-    "react-native-geolocation-service": "^5.3.1",
-    "react-native-permissions": "^3.10.1",
-    "react-native-app-usage": "^1.0.5",
-    "react-native-call-log": "^2.2.1",
-    "react-native-sms-retriever": "^1.1.1",
-    "react-native-usage-stats": "^1.1.0",
-    "react-native-background-fetch": "^4.1.9",
-    "react-native-keychain": "^8.1.3",
-    "react-native-encrypted-storage": "^4.0.3",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "axios": "^1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-app-usage": "^0.1.6",
+    "react-native-background-fetch": "^4.1.9",
+    "react-native-background-job": "^1.2.2",
+    "react-native-background-task": "^0.2.1",
+    "react-native-call-log": "^2.1.2",
+    "react-native-contacts": "^7.0.8",
+    "react-native-device-info": "^10.11.0",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-keychain": "^8.1.3",
+    "react-native-permissions": "^3.10.1",
+    "react-native-sms-retriever": "^1.1.1",
+    "react-native-usage-stats": "^0.0.9",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
@@ -45,6 +45,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
@@ -52,5 +53,14 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFiles": [
+      "./jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)/)"
+    ]
   }
 }
